<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Block Calls Now!</string>
    <string name="label_call_now">Calls Now!</string>
    <string name="label_you_re_blocked">—You\'re Blocked—</string>
    <string name="msg_to_conitune_block_calls_now_require_access_to_phone_contacts"><![CDATA[To conitune,Block Calls Now require access to Phone & Contacts.]]></string>
    <string name="label_continue">Continue</string>
    <string name="label_close">Close</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_blocked_list">Block List</string>
    <string name="menu_logs">Logs</string>
    <string name="msg_please_click_button_to_add_number_to_the_block_list">Please click + button to add number to the Block List</string>
    <string name="label_activate_deactivate">Activate/Deactivate</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_support">Support</string>
    <string name="label_setting">Setting</string>
    <string name="label_activate">Activate</string>
    <string name="label_deactivate">Deactivate</string>
    <string name="label_from_contacts">From Contacts</string>
    <string name="label_input_number">Input Number</string>
    <string name="msg_you_have_not_recorded_message_for_thi_contact">You have not recorded message for thi contact</string>
    <string name="msg_tap_to_record_custom_audio_for_this_contact">Tap to record custom audio for this contact.</string>
    <string name="label_audio">Audio</string>
    <string name="lable_custom_recorded_message">Custom Recorded Message</string>
    <string name="label_full_block">Full Block</string>
    <string name="label_login">Login</string>
    <string name="label_create_account_here">Create account here</string>
    <string name="hint_12312391203">+12312391203</string>
    <string name="hint_password">************</string>
    <string name="msg_don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="hint_jake_wharton">Jake Wharton</string>
    <string name="hint_jake_wharton_gmail_com">jake.wharton@gmail.com</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_hello">Hello,</string>
    <string name="label_logout">Logout</string>
    <string name="label_blocking">Blocking</string>
    <string name="label_calls">Calls</string>
    <string name="label_enable_blocked_list">Enable Blocked List</string>
    <string name="label_block_private_numbers">Block Private Numbers</string>
    <string name="label_block_unknown_numbers">Block Unknown Numbers</string>
    <string name="label_block_spam_likely_numbers">Block Spam Likely Numbers</string>
    <string name="label_block_international_numbers">Block International Numbers</string>
    <string name="label_block_all_calls_except_my_contacts">Block all calls except my contacts</string>
    <string name="label_block_all_calls">Block All Calls</string>
    <string name="label_block_all_calls_while_voip_is_established">Block all calls while VOIP is established</string>
    <string name="label_rate_5_stars">Rate 5 Stars</string>
    <string name="label_employment">Employment</string>
    <string name="share_intent_label">Messaging</string>
    <string name="share_intent_activity_label">Select conversation</string>
    <string name="sendButtonContentDescription">Send Message</string>
    <string name="attachMediaButtonContentDescription">Add an attachment</string>
    <string name="help_and_feedback_activity_label">Help</string>
    <string name="welcome">Welcome</string>
    <string name="skip">Skip</string>
    <string name="next_with_arrow">Next &gt;</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="settings_with_arrow">Settings &gt;</string>
    <string name="settings">Settings</string>
    <string name="required_permissions_promo">Messaging needs permission to SMS, Phone and Contacts.</string>
    <string name="enable_permission_procedure">You can change permissions in Settings > Apps > Messaging > Permissions.</string>
    <string name="enable_permission_procedure_description">You can change permissions in Settings, Apps, Messaging, Permissions.</string>
    <string name="contact_picker_frequents_tab_title">Frequents</string>
    <string name="contact_picker_all_contacts_tab_title">All contacts</string>
    <string name="contact_list_send_to_text">Send to <xliff:g id="destination">%s</xliff:g></string>
    <string name="mediapicker_cameraChooserDescription">Capture pictures or video</string>
    <string name="mediapicker_galleryChooserDescription">Choose images from this device</string>
    <string name="mediapicker_audioChooserDescription">Record audio</string>
    <string name="mediapicker_contactChooserDescription">Choose a contact from this device</string>
    <string name="mediapicker_gallery_title">Choose media</string>
    <string name="mediapicker_gallery_item_selected_content_description">The media is selected.</string>
    <string name="mediapicker_gallery_item_unselected_content_description">The media is unselected.</string>
    <string name="mediapicker_gallery_title_selection"><xliff:g id="count">%d</xliff:g> selected</string>
    <string name="mediapicker_gallery_image_item_description">image <xliff:g id="date">%1$tB %1$te %1$tY %1$tl %1$tM %1$tp</xliff:g></string>
    <string name="mediapicker_gallery_image_item_description_no_date">image</string>
    <string name="mediapicker_audio_title">Record audio</string>
    <string name="mediapicker_contact_title">Choose a contact</string>
    <string name="contact_picker_hint_text">Click to open contacts list on this device</string>
    <string name="action_share">Share</string>
    <string name="posted_just_now">"Just now"</string>
    <string name="posted_now">"Now"</string>
    <plurals name="num_minutes_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> min</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="num_hours_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> hour</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="num_days_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> day</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="week_count">
        
        <item quantity="one">a week</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> weeks</item>
    </plurals>
    <plurals name="month_count">
        
        <item quantity="one">a month</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> months</item>
    </plurals>
    <plurals name="year_count">
        
        <item quantity="one">a year</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> years</item>
    </plurals>
    <string name="class_0_message_activity">Class 0 message</string>
    <string name="save">Save</string>
    <string name="sms_storage_low_auto_delete_enabled_dialog_text">Device is low on space. Messaging will automatically delete older messages to free up space.</string>
    <string name="sms_storage_low_title">Storage space running out</string>
    <string name="sms_storage_low_text">Messaging might not send or receive messages until more space is available on your device.</string>
    <string name="sms_storage_low_notification_ticker">Low SMS storage. You may need to delete messages.</string>
    <string name="enter_phone_number_title">Confirm your phone number</string>
    <string name="enter_phone_number_text">This one-time step will ensure Messaging will deliver your group messages properly.</string>
    <string name="enter_phone_number_hint">Phone number</string>
    <string name="delete_all_media">Delete all messages with media</string>
    <string name="delete_oldest_messages">Delete messages older than <xliff:g id="duration">%s</xliff:g></string>
    <string name="auto_delete_oldest_messages">Auto-delete messages older than <xliff:g id="duration">%s</xliff:g></string>
    <string name="ignore">Ignore</string>
    <string name="delete_all_media_confirmation">Delete all messages with media?</string>
    <string name="delete_oldest_messages_confirmation">Delete messages older than <xliff:g id="duration">%s</xliff:g>?</string>
    <string name="auto_delete_oldest_messages_confirmation">Delete messages older than <xliff:g id="duration">%s</xliff:g> and turn on auto-delete?</string>
    <string name="incoming_text_sender_content_description"><xliff:g id="sender">%s</xliff:g> said</string>
    <string name="outgoing_text_sender_content_description">You said</string>
    <string name="incoming_sender_content_description">Message from <xliff:g id="sender">%s</xliff:g></string>
    <string name="outgoing_sender_content_description">You sent a message</string>
    <string name="message_status_sending">Sending&#8230;</string>
    <string name="message_status_send_failed">Not sent. Tap to try again.</string>
    <string name="message_status_send_retrying">Not sent. Trying again&#8230;</string>
    <string name="message_status_resend">Resend or delete</string>
    <string name="message_status_send_failed_emergency_number">Please make a voice call to emergency services. Your text message could not be delivered at this time.</string>
    <string name="message_status_failed">Failed</string>
    <string name="message_title_manual_download">New MMS message to download</string>
    <string name="message_title_downloading">New MMS message</string>
    <string name="message_title_download_failed">Couldn\'t download</string>
    <string name="message_status_download_failed">Tap to try again</string>
    <string name="message_status_download">Tap to download</string>
    <string name="message_status_download_action">Download or delete</string>
    <string name="message_status_downloading">Downloading&#8230;</string>
    <string name="message_status_download_error">Message expired or not available</string>
    <string name="mms_info">size: <xliff:g id="messageSize">%1$s</xliff:g>, expiration: <xliff:g id="messageExpire">%2$s</xliff:g></string>
    <string name="invalid_destination">Can\'t send. Recipient not valid.</string>
    <string name="service_not_activated">Service not activated on network</string>
    <string name="service_network_problem">Couldn\'t send due to network problem</string>
    <string name="service_message_not_found">Message expired or not available</string>
    <string name="no_subject">(No subject)</string>
    <string name="unknown_sender">Unknown sender</string>
    <string name="delivered_status_content_description">Delivered</string>
    <string name="apn_edit">Edit access point</string>
    <string name="apn_name">Name</string>
    <string name="apn_mmsc">MMSC</string>
    <string name="apn_mms_proxy">MMS proxy</string>
    <string name="apn_mms_port">MMS port</string>
    <string name="apn_mcc">MCC</string>
    <string name="apn_mnc">MNC</string>
    <string name="menu_messages">Messages</string>
    <string name="label_block_non_numeric_numbers">Block Non Numeric Numbers</string>
    <string name="label_text_messages">Text Messages</string>
    <string name="change_password">Change Password</string>
</resources>