<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#20a7b5"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/img_splash"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_white_round_corner"
            android:hint="@string/hint_12312391203"
            android:inputType="phone"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_white_round_corner"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/et_phone"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/btn_sigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_secondary_btn"
            android:text="@string/label_login"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="?selectableItemBackground"
            android:padding="@dimen/_10sdp"
            android:text="@string/msg_don_t_have_account_sign_up"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sigin"
            tools:ignore="Autofill,LabelFor" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>